<resources>
    <string name="app_name">EatSmart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="diet">Diet</string>
    <string name="recipes">Recipes</string>
    <string name="camera">Camera</string>
    <string name="diets">Diets</string>
    <string name="your_diets">Your diets</string>
    <string name="logout">Logout</string>
    <string name="discard">Discard</string>
    <string name="analyze">Analyze</string>
    <string name="diet_type">Diet type: %1$s</string>
    <string name="excluded_ingredients">Excluded ingredients: %1$s</string>
    <string name="active">Active</string>
    <string name="detail_diet_name">Diet name:</string>
    <string name="diet_detail_type">Diet type:</string>
    <string name="diet_detail_excluded">Excluded ingredients: </string>
    <string name="add">Add</string>
    <string name="calories_edit_diet">Calories:</string>
    <string name="calories_detail">CALORIES\nMax: %1$d\nMin: %2$d</string>
    <string name="fat_detail">FAT\nMax: %1$d g\nMin: %2$d g</string>
    <string name="carb_detail">CARBS\nMax: %1$d g\nMin: %2$d g</string>
    <string name="protein_detail">PROTEIN\nMax: %1$d g\nMin: %2$d g</string>
    <string name="edit_diet_details">EDIT DIET DETAILS</string>
    <string name="ready_time">%1$d min(s)</string>
    <string name="serving">%1$d</string>
    <string name="edit_diet">Edit diet</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="excluded_item">Excluded ingredient</string>
    <string name="protein_edit_diet">Protein(g):</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="fat_edit_diet">Fat(g):</string>
    <string name="carbs_edit_diet">Carbs(g):</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete diet</string>
    <string name="remove">Remove</string>
    <string name="protein">Protein(g)</string>
    <string name="calories">Calories</string>
    <string name="fat">Fat(g)</string>
    <string name="carbs">Carbs(g)</string>
    <string name="instructions">Instructions</string>
    <string name="inst_step">Step %1$d</string>
    <string name="add_to_diet">Add to diet</string>
    <string name="remove_from_diet">Remove from diet</string>
    <string name="search_recipe">Search recipe</string>
    <string name="search_for_recipes">Search for recipes</string>
    <string-array name="diet_type_list">
        <item>Pescetarian</item>
        <item>Lacto vegetarian</item>
        <item>Ovo vegetarian</item>
        <item>Vegan</item>
        <item>Paleo</item>
        <item>Primal</item>
        <item>Vegetarian</item>
    </string-array>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="got_it">GOT IT</string>

    <string name="slide_1_caption">Manage your diet wisely</string>
    <string name="slide_2_caption">Search for thousands recipes with ingredients and step-by-step instructions</string>
    <string name="slide_3_caption">Find out the nutrition facts of what you are eating</string>
</resources>
