<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.annguyen.android.eatsmart.dietdetails.fragments.EditDietDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/edit_diet_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/edit_diet_diet_type"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_diet_name_container"
        android:layout_marginStart="8dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_diet_exlc_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_diet_excluded_list"
        android:layout_marginStart="24dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_diet_exlc"
            android:minWidth="170dp"
            android:maxWidth="170dp"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/excluded_item"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:src="@drawable/ic_add_black_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_main_color"
        app:layout_constraintLeft_toRightOf="@+id/edit_diet_exlc_container"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_diet_excluded_list"
        android:id="@+id/btn_add_excl_item" />

    <TextView
        android:id="@+id/edit_diet_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories_edit_diet"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_diet_exlc_container"
        android:layout_marginStart="24dp" />

    <TextView
        android:id="@+id/edit_diet_fat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fat_edit_diet"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_diet_calories"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/edit_diet_calories"
        android:layout_marginEnd="8dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/edit_diet_excluded_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_diet_diet_type"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/edit_diet_diet_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/diet_detail_type"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_diet_name_container"
        android:layout_marginStart="24dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_calories_min_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/edit_diet_calories"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_diet_exlc_container"
        android:layout_marginStart="12dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_diet_calories_min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/min"
            android:minWidth="@dimen/nutri_input_width"
            android:maxWidth="@dimen/nutri_input_width"
            android:maxLines="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_calories_max_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/edit_calories_min_container"
        android:layout_marginLeft="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_calories_min_container"
        android:layout_marginStart="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_diet_calories_max"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/max"
            android:inputType="numberDecimal"
            android:minWidth="@dimen/nutri_input_width"
            android:maxWidth="@dimen/nutri_input_width"
            android:maxLines="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_fat_max_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_calories_max_container"
        app:layout_constraintLeft_toRightOf="@+id/edit_fat_min_container"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_diet_fat_max"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/max"
            android:inputType="numberDecimal"
            android:minWidth="@dimen/nutri_input_width"
            android:maxWidth="@dimen/nutri_input_width"
            android:maxLines="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_carbs_min_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_fat_min_container"
        app:layout_constraintLeft_toLeftOf="@+id/edit_fat_min_container">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_diet_carbs_min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/min"
            android:inputType="numberDecimal"
            android:minWidth="@dimen/nutri_input_width"
            android:maxWidth="@dimen/nutri_input_width"
            android:maxLines="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_fat_min_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_calories_min_container"
        app:layout_constraintLeft_toLeftOf="@+id/edit_calories_min_container">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_diet_fat_min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/min"
            android:inputType="numberDecimal"
            android:minWidth="@dimen/nutri_input_width"
            android:maxWidth="@dimen/nutri_input_width"
            android:maxLines="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_protein_min_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_carbs_min_container"
        app:layout_constraintLeft_toLeftOf="@+id/edit_carbs_min_container">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_diet_protein_min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/min"
            android:inputType="numberDecimal"
            android:minWidth="@dimen/nutri_input_width"
            android:maxWidth="@dimen/nutri_input_width"
            android:maxLines="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_carbs_max_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_fat_max_container"
        app:layout_constraintLeft_toRightOf="@+id/edit_carbs_min_container"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_diet_carbs_max"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/max"
            android:inputType="numberDecimal"
            android:minWidth="@dimen/nutri_input_width"
            android:maxWidth="@dimen/nutri_input_width"
            android:maxLines="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_protein_max_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_carbs_max_container"
        app:layout_constraintLeft_toRightOf="@+id/edit_protein_min_container"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_diet_protein_max"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/max"
            android:inputType="numberDecimal"
            android:minWidth="@dimen/nutri_input_width"
            android:maxWidth="@dimen/nutri_input_width"
            android:maxLines="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/edit_diet_carbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carbs_edit_diet"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_diet_fat"
        app:layout_constraintRight_toRightOf="@+id/edit_diet_fat" />

    <TextView
        android:id="@+id/edit_diet_protein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/protein_edit_diet"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_diet_carbs"
        app:layout_constraintRight_toRightOf="@+id/edit_diet_carbs" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_diet_name_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_diet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:minWidth="200dp"
            android:maxWidth="200dp"
            android:maxLines="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    </android.support.design.widget.TextInputLayout>


</android.support.constraint.ConstraintLayout>


