<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.annguyen.android.eatsmart.recipedetails.RecipeDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleEnabled="false"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">
            <android.support.v7.widget.Toolbar
                android:id="@+id/recipe_detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="parallax"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:behavior_overlapTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/recipe_detail_img"
                android:layout_width="match_parent"
                android:layout_height="350dp"/>

            <TextView
                tools:text="Chicken Chop"
                android:id="@+id/recipe_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_below="@id/recipe_detail_img"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/recipe_detail_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Source"
                android:layout_below="@id/recipe_detail_title"
                android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/recipe_detail_nutri_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/recipe_detail_source">


                <TextView
                    android:id="@+id/recipe_detail_carbs_value"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/color_secondary"
                    android:textSize="@dimen/recipe_detail_nutri_value_size"
                    android:textStyle="bold"
                    tools:text="100"
                    app:layout_constraintRight_toLeftOf="@+id/recipe_detail_protein_value"
                    app:layout_constraintLeft_toRightOf="@+id/recipe_detail_fat_value"
                    app:layout_constraintBottom_toBottomOf="@+id/recipe_detail_fat_value"
                    android:layout_marginBottom="0dp" />

                <TextView
                    android:id="@+id/reipce_detail_carbs_lbl"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="@string/carbs"
                    android:textAlignment="center"
                    app:layout_constraintRight_toLeftOf="@+id/recipe_detail_protein_lbl"
                    app:layout_constraintLeft_toRightOf="@+id/recipe_detail_fat_lbl"
                    app:layout_constraintBottom_toBottomOf="@+id/recipe_detail_fat_lbl"
                    android:layout_marginBottom="-8dp" />

                <TextView
                    android:id="@+id/recipe_detail_fat_value"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/color_secondary"
                    android:textSize="@dimen/recipe_detail_nutri_value_size"
                    android:textStyle="bold"
                    tools:text="100"
                    app:layout_constraintRight_toLeftOf="@+id/recipe_detail_carbs_value"
                    app:layout_constraintLeft_toRightOf="@+id/recipe_detail_calories_value"
                    app:layout_constraintBottom_toBottomOf="@+id/recipe_detail_calories_value"
                    android:layout_marginBottom="-6dp" />

                <TextView
                    android:id="@+id/recipe_detail_fat_lbl"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fat"
                    android:textAlignment="center"
                    app:layout_constraintRight_toLeftOf="@+id/reipce_detail_carbs_lbl"
                    app:layout_constraintLeft_toRightOf="@+id/recipe_detail_calories_lbl"
                    app:layout_constraintBottom_toBottomOf="@+id/recipe_detail_calories_lbl"
                    android:layout_marginBottom="-8dp" />

                <TextView
                    android:id="@+id/recipe_detail_calories_value"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    tools:text="100"
                    android:textAlignment="center"
                    android:textColor="@color/color_secondary"
                    android:textStyle="bold"
                    android:textSize="@dimen/recipe_detail_nutri_value_size"
                    app:layout_constraintRight_toLeftOf="@+id/recipe_detail_fat_value"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/recipe_detail_calories_lbl" />

                <TextView
                    android:id="@+id/recipe_detail_calories_lbl"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="@string/calories"
                    android:textAlignment="center"
                    app:layout_constraintRight_toLeftOf="@+id/recipe_detail_fat_lbl"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:id="@+id/recipe_detail_protein_value"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/color_secondary"
                    android:textSize="@dimen/recipe_detail_nutri_value_size"
                    android:textStyle="bold"
                    tools:text="100"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/recipe_detail_carbs_value"
                    app:layout_constraintBottom_toBottomOf="@+id/recipe_detail_carbs_value"
                    android:layout_marginBottom="0dp" />

                <TextView
                    android:id="@+id/recipe_detail_protein_lbl"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="@string/protein"
                    android:textAlignment="center"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/reipce_detail_carbs_lbl"
                    app:layout_constraintBottom_toBottomOf="@+id/reipce_detail_carbs_lbl"
                    android:layout_marginBottom="-8dp" />
            </android.support.constraint.ConstraintLayout>

            <TextView
                android:text="@string/instructions"
                android:id="@+id/recipe_detail_instruct_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/recipe_detail_nutri_info"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recipe_detail_intruct_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/recipe_detail_instruct_lbl"/>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/recipe_detail_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

</android.support.design.widget.CoordinatorLayout>
